--- a/package.json
+++ b/package.json
@@ -1,22 +1,32 @@
 {
-  "name": "start-with-gulp",
+  "name": "holocron-html",
   "version": "0.1.0",
   "private": true,
-  "description": "Стартовый репозиторий для проекта по верстке с Gulp и Sass",
+  "description": "Верстка лендинга Holocron",
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "1.x",
     "autoprefixer": "7.1.x",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.0.3",
+    "babel-preset-env": "^1.6.1",
     "browser-sync": "2.18.x",
     "css-mqpacker": "^6.0.1",
     "del": "^3.0.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.5.1",
     "gulp": "3.9.x",
+    "gulp-babel": "^7.0.0",
     "gulp-csso": "^3.0.0",
+    "gulp-eslint": "^4.0.0",
     "gulp-gh-pages": "^0.5.4",
     "gulp-imagemin": "^3.4.0",
     "gulp-plumber": "1.1.x",
     "gulp-postcss": "7.0.x",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "3.1.x",
+    "gulp-stylelint": "^5.0.0",
     "gulp-svgmin": "^1.2.4",
     "gulp-svgstore": "^6.1.0",
     "gulp-webp": "^2.3.0",
@@ -29,7 +39,7 @@
     "stylelint": "stylelint 'sass/**/*.scss' --syntax scss",
     "test": "npm run editorconfig && npm run stylelint",
     "build": "gulp build",
-    "start": "npm run build && gulp serve"
+    "start": "gulp"
   },
   "browserslist": [
     "last 2 versions",
