--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "gulp-svgstore": "^6.1.0",
     "gulp-webp": "^2.3.0",
     "run-sequence": "^2.2.0",
-    "stylelint": "8.1.x",
+    "stylelint": "^8.3.x",
     "stylelint-config-htmlacademy": "0.1.x"
   },
   "scripts": {
