--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-csso": "^3.0.0",
     "gulp-eslint": "^4.0.0",
     "gulp-gh-pages": "^0.5.4",
+    "gulp-htmlmin": "^4.0.0",
     "gulp-imagemin": "^3.4.0",
     "gulp-plumber": "1.1.x",
     "gulp-postcss": "7.0.x",
